--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ scala:
   - 2.12.6
 
 script:
-  - sbt clean coverage test coverageReport
+  - sbt clean coverage unitTest coverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
