Some more todos. :(

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -244,3 +244,23 @@ play.akka {
     http.server.transparent-head-requests = false
   }
 }
+
+play {
+
+  # Configuration for Play WS
+  ws {
+
+    timeout {
+
+      # If non null, the connection timeout, this is how long to wait for a TCP connection to be made
+      connection = 10 minutes
+
+      # If non null, the idle timeout, this is how long to wait for any IO activity from the remote host
+      # while making a request
+      idle = 10 minutes
+
+      # If non null, the request timeout, this is the maximum amount of time to wait for the whole request
+      request = 10 minutes
+    }
+  }
+}
